@@ -16,6 +16,8 @@
     * images
     * forms
     * list_items
+    * unordered_lists
+    * ordered_lists
   * Added ability to register and use custom elements based on standard elements (William Powell)
   * Added generated method to return text for a table
   * Added generated method to return text for an unordered list
